Implementing negative striding for python lists
ghstack-source-id: 5aa25f39fdd25bcd207b22873916313e654adcb2
Pull Request resolved: https://github.com/pytorch/pytorch/pull/33019

--- a/aten/src/ATen/native/native_functions.yaml
+++ b/aten/src/ATen/native/native_functions.yaml
@@ -2484,7 +2484,7 @@
   device_guard: False
   supports_named_tensor: True
 
-- func: slice.Tensor(Tensor(a) self, int dim=0, int start=0, int end=9223372036854775807, int step=1) -> Tensor(a)
+- func: slice.Tensor(Tensor(a) self, int dim=0, int start=9223372036854775807, int end=9223372036854775807, int step=1) -> Tensor(a)
   variants: function, method
   device_guard: False
   supports_named_tensor: True
